html for another page

--- a/assets/infinite.html
+++ b/assets/infinite.html
@@ -4,12 +4,8 @@
     <title>MyApp -- (app.html)</title>
     <meta name="viewport" content = "width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="home-page.css">
-    <script>
-      document.getElementById('Infinite').onclick = function button() {
-      alert("button was clicked")
-      };
-    </script>
+    <link rel="stylesheet" href="infinite-page.css">
+
   </head>
   <body>
     <section class = "hero">
@@ -22,11 +18,9 @@
           
           <nav>
             <ul>
-              <li class = "Infinite"><a href = "#">Infinte</a></li>
-              <li><a href = "#">100 Years</a></li>
-              <li><a href = "#">Millionaire Speedrun</a></li>
-              <li class = "active"><a href = "#">Leaderboards</a></li>
-              <li class = "help"><a href = "#"> How to Play</a></li>
+                <li><a href = "#">Home</a></li>
+              <li><a href = "#">Portfolio</a></li>
+              <li><a href = "#">Recent Trades</a></li>
             </ul>
           </nav>
           
