--- a/assets/infinite.html
+++ b/assets/infinite.html
@@ -33,7 +33,7 @@
       <!-- buy/sell -->
       <div class="left-container">
         <div class="dropdown">
-          <button onclick="toggleDropdown()" class="dropbtn">Choose Stock</button>
+          <button onclick="toggleDropdown()" class="dropbtn" id="dropbtn" >Choose Stock</button>
           <div id="myDropdown" class="dropdown-content">
             <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
             <button type="button" onclick="selectStock('AAPL')">AAPL</button>
