Calendar starts counting  when infinite is pressed

--- a/assets/infinite.html
+++ b/assets/infinite.html
@@ -20,6 +20,7 @@
 
         <nav>
           <ul>
+            <p id="dateTime"></p>
             <li><button id="home" onclick="goToHome()">Home</button></li>
             <li><button id="portfolio" onclick="goToPortfolio()">Portfolio</a></li>
             <li><button id="recenttrades" onclick="goToRecentTrades()">Recent Trades</a></li>
