added stop timer

--- a/assets/homepage.html
+++ b/assets/homepage.html
@@ -19,9 +19,9 @@
         <nav>
           <ul>
             <li><button id="infinite" onclick="startTimer();goToInfinite()">Infinite</button></li>
-            <li><button id="100years" onclick="goTo100Years()">100 Years</button></li>
-            <li><button id="speedrun">Millionaire Speedrun</button></li>
-            <li><button id="leaderboard">Leaderboards</button></li>
+            <li><button id="100years" onclick="goTo100Years()">100 Years - Currently Unavailable</button></li>
+            <li><button id="speedrun">Millionaire Speedrun - Currently Unavailable</button></li>
+            <li><button id="leaderboard">Leaderboards - Currently Unavailable</button></li>
             <li class="help"><button id="help" onclick="showHowToPlay()">How to Play</button></li>
           </ul>
         </nav>
