--- a/assets/infinite.html
+++ b/assets/infinite.html
@@ -43,10 +43,10 @@
                 <i class="fa-solid fa-forward" style="color: #2bae66;"></i>
               </button>
               <div id="ff-dropdown-content" class="ff-dropdown-content">
-                <button type="button" onclick="forwardWeek()">week</button>
-                <button type="button" onclick="forwardMonth()">month</button>
-                <button type="button" onclick="forwardYear()">year</button>
-                <button type="button" onclick="forwardDecade()">decade</button>
+                <button type="button" onclick="fastForward(1,0,0)">week</button>
+                <button type="button" onclick="fastForward(0,1,0)">month</button>
+                <button type="button" onclick="fastForward(0,0,1)">year</button>
+                <button type="button" onclick="fastForward(0,0,10)">decade</button>
               </div>
             </div>
             
