buy buttons working

--- a/assets/infinite.html
+++ b/assets/infinite.html
@@ -78,7 +78,6 @@
 
         <div id="buySellContainer">
           
-          <!-- INSTEAD OF buySellContainer -->
           <label class="switch">
             <input type="checkbox" checked onclick="switchBuySell()">
             <span class="slider round"></span>
@@ -97,7 +96,7 @@
         <div id="totalPrice"></div>
 
         <div id="commitTransaction">
-          <button onclick="commitTransaction()" id="buySell">Commit</button>
+          <button onclick="commitPurchaseJS()" id="buySell">Commit</button>
         </div>
 
 
