created portfolio page

--- a/assets/100years.html
+++ b/assets/100years.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Infinite</title>
+  <title>100 Years</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="stylesheet" href="infinite.css">
@@ -27,17 +27,7 @@
 
             <p id="dateTime"></p>
 
-            <!-- <div class="ff-dropdown-container">
-              <button onclick="fastForwardDropdown()" id="ffDropbtn">
-                <i class="fa-solid fa-forward" style="color: #2bae66;"></i>
-              </button>
-              <div id="ff-dropdown-content" class="ff-dropdown-content">
-                <button type="button" onclick="forwardWeek()">week</button>
-                <button type="button" onclick="forwardMonth()">month</button>
-                <button type="button" onclick="forwardYear()">year</button>
-                <button type="button" onclick="forwardDecade()">decade</button>
-              </div>
-            </div> -->
+            
             <div class="ff-dropdown-container">
               <button onclick="fastForwardDropdown()" id="ffDropbtn">
                 <i class="fa-solid fa-forward" style="color: #2bae66;"></i>
@@ -96,7 +86,7 @@
         <div id="totalPrice"></div>
 
         <div id="commitTransaction">
-          <button onclick="commitPurchaseJS()" id="commitButton">Commit</button>
+          <button onclick="commitPurchaseJS()" id="buySell">Commit</button>
         </div>
 
 
