--- a/assets/homepage.html
+++ b/assets/homepage.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>MyApp -- (app.html)</title>
+  <title>Millionaire Tycoon</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="stylesheet" href="homepage.css">
@@ -18,8 +18,8 @@
         </div>
         <nav>
           <ul>
-            <li><button id="infinite" onclick="startTimer();goToInfinite()">Infinite</button></li>
-            <li><button id="100years" onclick="goTo100Years()">100 Years - Currently Unavailable</button></li>
+            <li><button id="infinite" onclick="goToInfinite();startTimer()">Infinite - Currently Unavailable</button></li>
+            <li><button id="100years" onclick="goTo100Years();startTimer()">100 Years</button></li>
             <li><button id="speedrun">Millionaire Speedrun - Currently Unavailable</button></li>
             <li><button id="leaderboard">Leaderboards - Currently Unavailable</button></li>
             <li class="help"><button id="help" onclick="showHowToPlay()">How to Play</button></li>
