add temp get stock by symbol + tried 2 add portfol

--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -37,10 +37,16 @@
       <p>Stock Name: GOOG</p>
       <p>Current Price: $2500</p>
     </div>
+    <div id="purchaseInfoDiv"></div>
+    <h2>Why doesn't this pop up</h2>
     <!-- Add more tiles here for different stocks -->
   </section>
 
-  <script src="portfolio.js"></script>
+
+
+
+
+  <script src="portoflio.js"></script>
 </body>
 
 </html>
