tiles can be added in portfolio, reduced loading times

--- a/assets/infinite.html
+++ b/assets/infinite.html
@@ -18,7 +18,7 @@
         <nav>
           <ul>
             <li><button id="home" onclick="goToHome()">Home</button></li>
-            <li><button id="portfolio" onclick="goToPortfolio()">Portfolio</a></li>
+            <li><button id="portfolio" onclick="goToPortfolio();loadPortfolio()">Portfolio</a></li>
             <li><button id="recenttrades" onclick="goToRecentTrades()">Recent Trades</a></li>
               
             <button id="playPauseButton" onclick="switchPlayPause()">
