--- a/assets/100years.html
+++ b/assets/100years.html
@@ -5,7 +5,7 @@
   <title>100 Years</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="stylesheet" href="infinite.css">
+  <link rel="stylesheet" href="100years.css">
 
 </head>
 
@@ -18,7 +18,7 @@
         <nav>
           <ul>
             <li><button id="home" onclick="goToHome()">Home</button></li>
-            <li><button id="portfolio" onclick="goToPortfolio()">Portfolio</a></li>
+            <li><button id="portfolio" onclick="goToPortfolio();loadPortfolio()">Portfolio</a></li>
             <li><button id="recenttrades" onclick="goToRecentTrades()">Recent Trades</a></li>
               
             <button id="playPauseButton" onclick="switchPlayPause()">
@@ -114,7 +114,7 @@
     </div>
   </section>
   
-  <script src="infinite.js"></script>
+  <script src="100years.js"></script>
   <script src="https://kit.fontawesome.com/0fff93c7e8.js" crossorigin="anonymous"></script>
 
 </body>
