--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,17 +13,19 @@
     <nav>
       <ul>
         <li><button id="home" onclick="goToHome()">Home</button></li>
-        <li><button id="100years" onclick="goTo100years()">Back</button></li>
-        <li><button id="recenttrades" onclick="goToRecentTrades()">Recent Trades</button></li>
+        <li><button id="100years" onclick="goTo100Years()">Back</button></li>
       </ul>
     </nav>
     <div class="game-name">
       <h2>Millionaire Tycoon</h2>
     </div>
   </header>
+  
+  <button type="button" onclick="addStock()">Add Stock</button>
+  <p id="result">hello</p>
 
   <section class="tiles-container">
-    <!-- Placeholder for stock tiles -->
+  
     <div class="stock-tile">
       <p>Stock Name: AAPL</p>
       <p>Current Price: $200</p>
@@ -37,16 +38,15 @@
       <p>Stock Name: GOOG</p>
       <p>Current Price: $2500</p>
     </div>
-    <div id="purchaseInfoDiv"></div>
-    <h2>Why doesn't this pop up</h2>
-    <!-- Add more tiles here for different stocks -->
+
+    
+
   </section>
 
 
 
 
-
-  <script src="portoflio.js"></script>
+  <script src="portfolio.js"></script>
 </body>
 
 </html>
