--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -21,12 +21,12 @@
     </div>
   </header>
   
-  <button type="button" onclick="addStock()">Add Stock</button>
-  <p id="result">hello</p>
+  <!-- <button type="button" onclick="addStock()">Add Stock</button>
+  <p id="result">hello</p> -->
 
   <section class="tiles-container">
   
-    <div class="stock-tile">
+    <!-- <div class="stock-tile">
       <p>Stock Name: AAPL</p>
       <p>Current Price: $200</p>
     </div>
@@ -37,7 +37,7 @@
     <div class="stock-tile">
       <p>Stock Name: GOOG</p>
       <p>Current Price: $2500</p>
-    </div>
+    </div> -->
 
     
 
