changes to portfolio page, changes to calendar implementation

--- a/assets/homepage.html
+++ b/assets/homepage.html
@@ -18,8 +18,8 @@
         </div>
         <nav>
           <ul>
-            <li><button id="infinite" onclick="goToInfinite();startTimer()">Infinite - Currently Unavailable</button></li>
-            <li><button id="100years" onclick="goTo100Years();startTimer()">100 Years</button></li>
+            <li><button id="infinite" onclick="startTimer();stopTimer();goToInfinite()">Infinite - Currently Unavailable</button></li>
+            <li><button id="100years" onclick="startTimer();stopTimer();goTo100Years()">100 Years</button></li>
             <li><button id="speedrun">Millionaire Speedrun - Currently Unavailable</button></li>
             <li><button id="leaderboard">Leaderboards - Currently Unavailable</button></li>
             <li class="help"><button id="help" onclick="showHowToPlay()">How to Play</button></li>
