--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -21,8 +21,8 @@
     </div>
   </header>
   
-  <!-- <button type="button" onclick="addStock()">Add Stock</button>
-  <p id="result">hello</p> -->
+  <button type="button" onclick="addStock()">Add Stock</button>
+  <p id="result">hello</p>
 
   <section class="tiles-container">
   
@@ -43,6 +43,13 @@
 
   </section>
 
+  <div class="skinny-tile">
+    <!-- Content for the skinny tile -->
+    <p>Total balance: $100,000</p>
+    <p>Years trading: 15</p>
+    <p>Total profit/loss</p>
+    <p>Best performing stocks</p>
+  </div>
 
 
 
