--- a/assets/100years.html
+++ b/assets/100years.html
@@ -18,11 +18,10 @@
         <nav>
           <ul>
             <li><button id="home" onclick="goToHome()">Home</button></li>
-            <li><button id="portfolio" onclick="goToPortfolio();loadPortfolio()">Portfolio</a></li>
-            <li><button id="recenttrades" onclick="goToRecentTrades()">Recent Trades</a></li>
+            <li><button id="portfolio" onclick="goToPortfolio();stopTimer();loadPortfolio()">Portfolio</a></li>
               
             <button id="playPauseButton" onclick="switchPlayPause()">
-              <i class="fa-solid fa-pause style="color: #2bae66;"></i>
+              <i class="fa-solid fa-play style="color: #2bae66;"></i>
             </button>
 
             <p id="dateTime"></p>
@@ -54,14 +53,14 @@
       <!-- buy/sell -->
       <div class="left-container">
         <div class="dropdown">
-          <button onclick="toggleDropdown()" class="dropbtn" id="dropbtn" >Choose Stock</button>
+          <button onclick="toggleDropdown();stopTimer();swapPlayAndPause()" class="dropbtn" id="dropbtn" >Choose Stock</button>
           <div id="myDropdown" class="dropdown-content">
             <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-            <button type="button" onclick="selectStock('AAPL')">AAPL</button>
+            <!-- <button type="button" onclick="selectStock('AAPL')">AAPL</button>
             <button type="button" onclick="selectStock('AMZN')">AMZN</button>
             <button type="button" onclick="selectStock('GOOG')">GOOG</button>
             <button type="button" onclick="selectStock('AMGN')">AMGN</button>
-            <button type="button" onclick="selectStock('MSFT')">MSFT</button>
+            <button type="button" onclick="selectStock('MSFT')">MSFT</button> -->
           </div>
         </div>
 
