added some documentation to MyApp.cpp

--- a/assets/100years.html
+++ b/assets/100years.html
@@ -85,7 +85,7 @@
         <div id="totalPrice"></div>
 
         <div id="commitTransaction">
-          <button onclick="commitPurchaseJS()" id="buySell">Commit</button>
+          <button onclick="commitPurchaseJS()" id="commitButton">Commit</button>
         </div>
 
 
