added portfolio functionality

--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,16 +17,19 @@
         <li><button id="100years" onclick="goTo100Years()">Back</button></li>
       </ul>
     </nav>
+    <div class="totalBalance">
+
+    </div>
     <div class="game-name">
       <h2>Millionaire Tycoon</h2>
     </div>
   </header>
-  
-  <button type="button" onclick="addStock()">Add Stock</button>
-  <p id="result">hello</p>
+
+  <!-- <button type="button" onclick="addStock()">Add Stock</button> -->
+  <!-- <p id="result">hello</p> -->
 
   <section class="tiles-container">
-  
+
     <!-- <div class="stock-tile">
       <p>Stock Name: AAPL</p>
       <p>Current Price: $200</p>
@@ -39,17 +43,13 @@
       <p>Current Price: $2500</p>
     </div> -->
 
-    
+
 
   </section>
 
-  <div class="skinny-tile">
-    <!-- Content for the skinny tile -->
-    <p>Total balance: $100,000</p>
-    <p>Years trading: 15</p>
-    <p>Total profit/loss</p>
-    <p>Best performing stocks</p>
-  </div>
+  <section class="investment-summary">
+
+  </section>
 
 
 
