--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -51,6 +51,13 @@
 
   </section>
 
+  <!-- Custom Modal -->
+  <div class="modal" id="sellTileModal">
+    <div class="modal-content">
+      <span class="close" onclick="closeSellTile()">&times;</span>
+
+    </div>
+  </div>
 
 
   <script src="portfolio.js"></script>
