feat: ability to short stocks

--- a/assets/100years.html
+++ b/assets/100years.html
@@ -67,7 +67,7 @@
               <span class="slider round"></span>
             </label>
 
-            <p id="buySell">Buy</p>
+            <p id="buySell">Long</p>
           </div>
 
           <div id="currentPrice">$21.15</div>
