style: portoflio page changed to new theme

--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -9,40 +9,25 @@
   <title>Portfolio</title>
 </head>
 
+
+
+
 <body>
   <header>
-    <nav>
-      <ul>
-        <li><button id="home" onclick="goToHome()">Home</button></li>
-        <li><button id="100years" onclick="goTo100Years()">Back</button></li>
-      </ul>
-    </nav>
+    <h1>Millionaire Tycoon </h1>
     <div class="totalBalance">
 
     </div>
-    <div class="game-name">
-      <h2>Millionaire Tycoon</h2>
+    <div id="button-container">
+      <button id="home" onclick="goToHome()">Home</button>
+      <button id="hundyyears" onclick="goTo100Years()">Back</button>
     </div>
+
+
   </header>
 
-  <!-- <button type="button" onclick="addStock()">Add Stock</button> -->
-  <!-- <p id="result">hello</p> -->
 
   <section class="tiles-container">
-
-    <!-- <div class="stock-tile">
-      <p>Stock Name: AAPL</p>
-      <p>Current Price: $200</p>
-    </div>
-    <div class="stock-tile">
-      <p>Stock Name: AMZN</p>
-      <p>Current Price: $3000</p>
-    </div>
-    <div class="stock-tile">
-      <p>Stock Name: GOOG</p>
-      <p>Current Price: $2500</p>
-    </div> -->
-
 
 
   </section>
@@ -50,12 +35,10 @@
   <section class="investment-summary">
 
   </section>
+  <img id="arrows" src="—Pngtree—blue gradient financial arrow_6489125.png" alt="Image Description">
 
-  <!-- Custom Modal -->
   <div class="modal" id="sellTileModal">
     <div class="modal-content">
-      <span class="close" onclick="closeSellTile()">&times;</span>
-
     </div>
   </div>
 
