fix: re-added dates

--- a/assets/100years.html
+++ b/assets/100years.html
@@ -32,9 +32,10 @@
     <h1>Millionaire Tycoon </h1>
     <div class="totalBalance">
     </div>
+    <div id="dateTime"></div>
     <div id="dates-container">
       <button id="playPauseButton" onclick="switchPlayPause()">
-        <i class="fa-solid fa-play style=" color: #2bae66;"></i>
+        <i class="fa-solid fa-play" style="color: #040568;"></i>
       </button>
       <div class="ff-dropdown-container">
         <button onclick="fastForwardDropdown()" id="ffDropbtn">
