--- a/assets/homepage.html
+++ b/assets/homepage.html
@@ -30,7 +30,7 @@
     </div>
 
     <div id="start-button">
-      <button id="hundyyears" onclick="startTimer();stopTimer();goTo100Years()">Start Trading Now!</button>
+      <button id="hundyyears" onclick="goTo100Years()">Start Trading Now!</button>
     </div>
 
     <!-- <nav>
